--- a/jinja2/lifestyle.html.jinja2
+++ b/jinja2/lifestyle.html.jinja2
@@ -20,7 +20,7 @@
 {% block content %}
     <div class="intro scroll-row">
         <div id="subhead">Beliefs and Lifestyle</div>
-        <p>Part IV of The Crimson’s survey of the Class of 2018 focuses on the beliefs and lifestyles of the incoming freshmen. Thirty-eight percent of respondents said they were still virgins. Even fewer have tried marijuana or smoked a cigarette. When it comes to politics, the Class of 2018 appears to be decidedly liberal, with a majority favorably rating President Barack Obama and same-sex marriage. While the survey’s respondents—who account for more than 70 percent of the incoming class—are less alike when it comes to religion, most seem to be united in their attachment to Facebook.</p>
+        <p>Part IV of The Crimson’s survey of the Class of 2018 focuses on the beliefs and lifestyles of the incoming freshmen. Thirty-eight percent of respondents said they were still virgins. Even fewer have tried marijuana or smoked a cigarette. When it comes to politics, the Class of 2018 appears to be decidedly liberal, with a majority favorably rating President Barack Obama and same-sex marriage. And while the survey’s respondents—who account for more than 70 percent of the incoming class—are less alike when it comes to religion, most seem to be united in their attachment to Facebook.</p>
         <p>Read Part IV of The Crimson's five-part series on the freshman survey <a href="FILLME">here</a>.</p>
 
     </div>
@@ -56,7 +56,7 @@
             <li id="religiosity-tab">
                 <h2>Religiosity</h2>
                 <div id="religiosity" class="graph"></div>
-                <p>Although 54 percent of surveyed freshmen said they identify with a major religion, only 41 percent said they consider themselves in any way religious. Fewer still—23 percent of respondents—characterized themselves as either religious or very religious. By contrast, 61 percent of Harvard's newest students said they are either not very religious or not religious at all.</p>
+                <p>Although 54 percent of surveyed freshmen said they identify with a major religion, only 41 percent said they consider themselves in any way religious. Fewer still—23 percent of respondents—characterized themselves as either religious or very religious. By contrast, 59 percent of Harvard's newest students said they are either not very religious or not religious at all.</p>
             </li>
             <li id="religion-region-tab">
                 <h2>Religion by Region</h2>
@@ -68,7 +68,7 @@
             <li id="religion-income-tab">
                 <h2>Religiosity by Income</h2>
                 <div id="religion-income" class="graph"></div>
-                <p>Students from lower- and middle-income families were more likely to identify as very religious than their wealthier peers. Students from households in the $125,000 to $250,000-a-year bracket were most likely to call themselves not at all religious.</p> 
+                <p>Respondents from lower- and middle-income families were more likely to identify as very religious than their wealthier peers. Respondents from households in the $125,000 to $250,000-a-year bracket were most likely to call themselves not at all religious.</p> 
             </li>
             <li id="religion-race-tab">
                 <h2>Religion by Ethnicity</h2>
@@ -78,7 +78,8 @@
             <li id="religion-religion-tab">
                 <h2>Religiosity by Religion</h2>
                 <div id="religion-religion" class="graph"></div>
-                <p>Of those respondents who reported adherence to a major religion, Buddhists are the least religious, with 11 percent saying they are religious or very religious. By contrast, of those who identified themselves as Protestant, 52 percent said they were religious or very religious.</p> 
+                <p>Of those respondents who reported adherence to a major religion, Buddhists are the least religious, with 11 percent saying they are religious or very religious. By contrast, of those who identified themselves as Protestant, 52 percent said they were religious or very religious.</p>
+                <p>1=Not at all religious; 2=Not very religious; 3=Somewhat religious; 4=Religious; 5=Very Religious</p>
             </li>
         </ul>
     </div>
@@ -127,7 +128,7 @@
                         <p>Westerners were least likely to identify as conservative and most likely to call themselves liberals. Respondents who called themselves conservative were most likely to hail from the Southeast, where 18 percent of new students said they fall to the right of the political spectrum.</p>
                     </div>
                     <div id="regions-right">
-                        <h2>Mouseover region to see data.</h2>
+                        <h2>Mouse over region to see data.</h2>
                         <div id="northeast" class="region">
                             <h3>
                                 <div class="region-stat">62.8%</div>
@@ -305,7 +306,7 @@
             <li id="politics-sexuality-tab">
                 <h2>Politics by Sexual Orientation</h2>
                 <div id="politics-sexuality" class="graph"></div>
-                <p>Just two of the 41 respondents who identified as homosexual called themselves conservative. Approximately 97 percent of respondents who identified as conservative identified as heterosexual.</p>
+                <p>Just two of the 41 respondents who identified as homosexual called themselves conservative. About 97 percent of respondents who identified as conservative identified as heterosexual.</p>
             </li>
             <li id="politics-ethnicity-tab">
                 <h2>Politics by Ethnicity</h2>
@@ -379,17 +380,17 @@
             <li id="sex-partners-gender-tab">
                 <h2>Sexual Partners by Gender</h2>
                 <div id="sex-partners-gender" class="graph"></div>
-                <p>While most respondents said they had only one sexual partner, men were more likely than women to reporting that they have had sex with more than one person.</p>
+                <p>While most respondents said they had only one sexual partner, men were more likely than women to report that they have had sex with more than one person.</p>
             </li>
             <li id="sex-partners-athletes-tab">
                 <h2>Sexual Activity by Recruitment Status</h2>
                 <div id="sex-partners-athletes" class="graph"></div>
-                <p>The survey suggests that recruited athletes are more likely than their non-recruited peers to have done the deed. Sixty-one percent of surveyed recruits said they've had sex, while just over a third of the rest of the class said they've lost their virginity.</p>
+                <p>The survey suggests that recruited athletes are more likely than their non-recruited peers to have had sex. Sixty-one percent of surveyed recruits said they've had sex, while just over a third of the rest of the class said they've lost their virginity.</p>
             </li>
             <li id="sex-orientation-tab">
                 <h2>Sexual Activity by Sexuality</h2>
                 <div id="sex-orientation" class="graph"></div>
-                <p>Surveyed freshmen who identify as homosexual or bisexual are more likely than their heterosexual peers to report that they have had sex. Forty-four percent of homosexuals and 57 percent of bisexuals reported having had sex, compared to 37 percent of heterosexuals. Among freshmen who are questioning their sexuality, 34 percent reported that they have lost their virginity.</p>
+                <p>Surveyed freshmen who identified as homosexual or bisexual are more likely than their heterosexual peers to report that they have had sex. Forty-four percent of homosexuals and 57 percent of bisexuals reported having had sex, compared to 37 percent of heterosexuals. Among freshmen who are questioning their sexuality, 34 percent reported that they have lost their virginity.</p>
             </li>
         </ul>
     </div>
@@ -438,7 +439,7 @@
             <li id="drugs-alcohol-tab" class="active">
                 <h2>Alcohol Drinkers</h2>
                 <div id="drugs-alcohol" class="graph"></div>
-                <p>Sixty-five percent of respondents said they tried alcohol before coming to Harvard, and 39 percent of surveyed freshmen claimed to drink at least once a month. Fifteen percent reported having a drink once a week or more, approximately the same percentage as last year’s number.</p>
+                <p>Sixty-five percent of respondents said they tried alcohol before coming to Harvard, and 39 percent of surveyed freshmen claimed to drink at least once a month. Fifteen percent reported having a drink once a week or more, about the same percentage as last year’s number.</p>
             </li>
             <li id="drugs-weed-tab">
                 <h2>Marijuana Users</h2>
@@ -448,7 +449,7 @@
             <li id="drugs-weed-legal-tab">
                 <h2>Support for Marijuana Legalization by Use</h2>
                 <div id="drugs-weed-legal" class="graph"></div>
-                <p>Those who said they had never smoked marijuana made up 95% of those freshmen who said they viewed marijuana legalization unfavorably. All respondents who reported smoking once or twice a week supported legalization.</p>
+                <p>Those who said they had never smoked marijuana made up 95 percent of those freshmen who said they viewed marijuana legalization unfavorably. All respondents who reported smoking once or twice a week supported legalization.</p>
             </li>
             <li id="drugs-hard-tab">
                 <h2>Hard Drug Users</h2>
@@ -478,7 +479,7 @@
             <li id="drugs-athletes-tab">
                 <h2>Drug Use by Recruitment Status</h2>
                 <div id="drugs-athletes" class="graph"></div>
-                <p>Recruited athletes were more likely than non-recruits to report having tried alcohol, but approximately as likely to say they had used tobacco or marijuana.</p>
+                <p>Recruited athletes were more likely than non-recruits to report having tried alcohol, but about as likely to say they had used tobacco or marijuana.</p>
             </li>
             <li id="drugs-religion-tab">
                 <h2>Drinkers by Religion</h2>
@@ -549,7 +550,7 @@
             <li id="phone-type-tab">
                 <h2>Cell Phones</h2>
                 <div id="phone-type" class="graph"></div>
-                <p>Seventy-three percent of respondents said they own an iPhone. 20 percent said they have an Android phone, and 4 percent a non-smart phone. Only three respondents reported that they do not own a cell phone.</p>
+                <p>Seventy-three percent of respondents said they own an iPhone. Twenty percent said they have an Android phone, and 4 percent a non-smart phone. Only three respondents reported that they do not own a cell phone.</p>
             </li>
             <li id="income-mac-tab">
                 <h2>Mac Ownership by Parents&#39; Income</h2>
@@ -559,7 +560,7 @@
             <li id="income-iphone-tab">
                 <h2>iPhone Ownership by Parents&#39; Income</h2>
                 <div id="income-iphone" class="graph"></div>
-                <p>In each and every income bracket, the iPhone is king. Overall, 73 percent of respondents said they own an iPhone, including nearly 91 percent of students whose parents make more than $500,000. However, as family income decreases, so does iPhone ownership; just 54 percent of respondents in the lowest income bracket—a combined parental income below $40,000—reported owning an iPhone.</p>
+                <p>In each and every income bracket, the iPhone is king. Overall, 73 percent of respondents said they own an iPhone, including 92 percent of students whose parents make more than $500,000. However, as family income decreases, so does iPhone ownership; just 54 percent of respondents in the lowest income bracket—a combined parental income below $40,000—reported owning an iPhone.</p>
             </li>
             <li id="facebook-tab">
                 <h2>Facebook Usage</h2>
