--- a/jinja2/_base.html.jinja2
+++ b/jinja2/_base.html.jinja2
@@ -5,7 +5,7 @@
 
 		<title>The Harvard Crimson | Class of 2018 By the Numbers</title>
 
-		<!-- <base href="http://features.thecrimson.com/2014/freshman&#45;survey/"> -->
+		<!-- <base href="http://features.thecrimson.com/2014/freshman-survey/"> -->
         <base href="http://localhost:8000/compiled_html/">
 
 		<link href="http://fonts.googleapis.com/css?family=Lato:400,700|Crimson|Colaborate" rel="stylesheet" type="text/css">
@@ -58,7 +58,7 @@
 			<div id="subnav">
 				<ul>
                     {% block nav_items %}{% endblock %}
-                    <li><a href="{% block narrative_link %}{% endblock %}"><span id="narrative-button">Read Narrative</span></a></li>
+                    {% if filename != "index" %}<li><a href="{% block narrative_link %}{% endblock %}"><span id="narrative-button">Read Narrative</span></a></li>{% endif %}
 				</ul>
 			</div>
 			<div id="main">
