add narrative links

--- a/jinja2/lifestyle.html.jinja2
+++ b/jinja2/lifestyle.html.jinja2
@@ -15,13 +15,13 @@
     <li>Mental Health</li>
     <li>Technology</li>
 {% endblock %}
-{% block narrative_link %}FILLME{% endblock %}
+{% block narrative_link %}http://www.thecrimson.com/article/2014/9/5/freshman-survey-beliefs-lifestyle/{% endblock %}
 
 {% block content %}
     <div class="intro scroll-row">
         <div id="subhead">Beliefs and Lifestyle</div>
         <p>Part IV of The Crimson’s survey of the Class of 2018 focuses on the beliefs and lifestyles of the incoming freshmen. Thirty-eight percent of respondents said they were still virgins. Even fewer have tried marijuana or smoked a cigarette. When it comes to politics, the Class of 2018 appears to be decidedly liberal, with a majority favorably rating President Barack Obama and same-sex marriage. And while the survey’s respondents—who account for more than 70 percent of the incoming class—are less alike when it comes to religion, most seem to be united in their attachment to Facebook.</p>
-        <p>Read Part IV of The Crimson's five-part series on the freshman survey <a href="FILLME">here</a>.</p>
+        <p>Read Part IV of The Crimson's five-part series on the freshman survey <a href="http://www.thecrimson.com/article/2014/9/5/freshman-survey-beliefs-lifestyle/">here</a>.</p>
 
     </div>
 
