--- a/jinja2/yale.html.jinja2
+++ b/jinja2/yale.html.jinja2
@@ -10,13 +10,13 @@
 {% block nav_items %}
     <li>Harvard vs. Yale</li>
 {% endblock %}
-{% block narrative_link %}FILLME{% endblock %}
+{% block narrative_link %}http://www.thecrimson.com/article/2014/9/5/freshman-survey-part-v/{% endblock %}
 
 {% block content %}
     <div class="intro scroll-row">
         <div id="subhead">Yale's Freshman Class</div>
         <p>In the final part of The Crimson’s series on the Class of 2018, we turn our attention south, to New Haven. The Crimson partnered with the Yale Daily News to compare the newest Harvardians with incoming Yalies. The two classes, it turns out, appear to be remarkably similar. Though more Harvard respondents expressed interest in Greek life than their Yale counterparts and the two classes demonstrate opposite gender skews, on most points, they agree. Except perhaps, on the score of this year&rsquo;s Game.</p>
-        <p>Read Part V of The Crimson's five-part series on the freshman survey <a href="FILLME">here</a>.</p> </div>
+        <p>Read Part V of The Crimson's five-part series on the freshman survey <a href="http://www.thecrimson.com/article/2014/9/5/freshman-survey-part-v/">here</a>.</p> </div>
     <div class="scroll-row">
         <h1>Harvard vs. Yale</h1>
         <ul class="nav nav-tabs">
