--- a/jinja2/index.html.jinja2
+++ b/jinja2/index.html.jinja2
@@ -35,14 +35,14 @@
 			<div class="survey-section">
 				<div class="subhead">Lifestyle</div>
 				<div class="card" id="sex1" data-destination="lifestyle/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card" id="sex2" data-destination=""><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
+				<div class="card" id="sex2" data-destination="http://www.thecrimson.com/article/2014/9/5/freshman-survey-beliefs-lifestyle/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 		</div>
 		<div class="section-container clearfix">
 			<div class="survey-section survey-section-center">
 				<div class="subhead">Yale</div>
 				<div class="card" id="yale1" data-destination="yale/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card" id="yale2" data-destination="FILLME"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
+				<div class="card" id="yale2" data-destination="http://www.thecrimson.com/article/2014/9/5/freshman-survey-part-v/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 		</div>
 	</div>
