--- a/jinja2/_base.html.jinja2
+++ b/jinja2/_base.html.jinja2
@@ -3,10 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>The Harvard Crimson | Class of 2018 By the Numbers</title>
+		<title>The Harvard Crimson | Class of 2019 By the Numbers</title>
 
-		<base href="http://features.thecrimson.com/2014/freshman-survey/">
-        {# <base href="http://localhost:8000/compiled_html/"> #}
+		{# <base href="http://features.thecrimson.com/2014/freshman-survey/"> #}
+        <base href="http://52.4.112.243:81/">
 
 		<link href="http://fonts.googleapis.com/css?family=Lato:400,700|Crimson|Colaborate" rel="stylesheet" type="text/css">
 		<link rel="stylesheet" type="text/css" href="css/fresh.css">
