--- a/jinja2/makeup-narrative.html.jinja2
+++ b/jinja2/makeup-narrative.html.jinja2
@@ -1,9 +1,6 @@
 {% extends 'jinja2/_base.html.jinja2' %}
 
 {% block js %}
-    <script src="js/regions.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/charts.js" type="text/javascript" charset="utf-8"></script>
-    <script src="js/classmakeup.js" type="text/javascript" charset="utf-8"></script>
     <script src="js/scroll.js" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
 
@@ -20,7 +17,9 @@
 {% block cover_image %}<div class="full-width" style="height: 454px; margin-top: 0px; background-image: url(http://thumbnails.thecrimson.com.s3.amazonaws.com/photos/2014/08/29/231445_1298137.jpg.800x533_q95_crop-smart_upscale.jpg);background-repeat: no-repeat;background-size: cover;"></div>{% endblock %}
 
 {% block content %}
-    <div id="narrative" class="intro scroll-row"{#  style="width: 600px; margin: 0 auto; font-family: Georgia; font-size: 15px; line-height: 23px;" #}>
+    <div id="subhead">Makeup of the Class</div>
+    <div id="narrative" class="intro scroll-row">
+        <p id="byline"><i>By</i> Those People Who Write Stuff</p>
         <p><em>Part I of a five-part series on Harvard’s incoming Class of 2018, based on data collected by The Crimson in an email survey conducted in the month of August. Part II will run on Wednesday.</em></p>
         <p>More than a quarter of surveyed students in the Class of 2018—the most diverse in Harvard College history by some metrics—reported that a member of their immediate or extended family attended the College, according to The Harvard Crimson’s annual survey of the incoming freshman class.</p>
         <p>Sixteen percent of respondents reported that at least one of their parents attended the College, meaning that they are considered Harvard legacies by the College. Members of this group “may receive an additional look” in the admissions process, according to the College’s <a href="https://college.harvard.edu/frequently-asked-questions">website</a>.</p>
@@ -29,7 +28,7 @@
         <p>Freshmen who reported coming from wealthier backgrounds were more likely to say that they have a relative that attended the College. A majority of freshmen with parents that have a reported combined income greater than $500,000 said they have a relative who attended the College, and 43 percent of respondents with parents that have a combined income greater than $250,000 said the same. Only 18 percent of those with parents that earn a combined income less than $250,000 reported that a relative was at one time a Harvard undergraduate.</p>
         <p>The email survey, conducted by The Harvard Crimson, was emailed to all incoming freshman on Aug. 6 and closed on Aug. 28. Of the 1667 students in the incoming freshman class, 1,172 responded to the survey, representing around 70 percent of the class.</p>
         <p>Beyond questions about their family’s history at the College, this annual survey encompassed a broad range of topics, including demographics, financial and educational backgrounds, academic and extracurricular experiences, political and religious beliefs, sexuality, drug and alcohol use, mental health, and technology preferences. The Crimson did not adjust the survey results for any possible selection bias.</p>
-        <p><strong>Breaking it Down</strong></p>
+        <p class="scroll-row"><strong>Breaking it Down</strong></p>
         <p>While the demographics of the incoming freshman class are largely consistent with those of the Class of 2017, female students make up a smaller proportion of this year’s surveyed freshmen compared to <a href="http://www.thecrimson.com/article/2013/9/3/freshmen-employment-demographics-geography/">last year’s</a>.</p>
         <p>According to the data, 47 percent of respondents is female and 53 percent is male, compared to a roughly even split in recent years. Fitzsimmons <a href="http://www.thecrimson.com/article/2014/3/27/regular-admissions-class-2018/">said in March</a> that the College admitted more males than females for the class.</p>
         <p>Little has changed with the ethnic composition of this year’s Harvard Yard occupants. With some students identifying as multiple ethnicities, 62 percent of respondents identified as white, 24 percent identified as Asian, and 11 percent identified as black or African American. Hispanic and Latino students make up a reported 12 percent of the class. Those numbers are consistent with official statistics released by the College.</p>
@@ -37,14 +36,14 @@
         <p>Of those who said they were homosexual, 78 percent identified as male, 17 percent identified as female, and 5 percent identified as “other.” However, females were more likely to identify as bisexual or “questioning.” Of those who identified as bisexual, 63 percent were female, while 30 percent were male. Similarly, 66 percent of those who identified as “questioning” were female and 34 percent were male.</p>
         <p>Position in birth order was also congruent with data from last year’s survey. A plurality of respondents—42 percent—claimed to be the firstborn child in their family, a four percentage point increase from last year’s class. Twenty-nine percent indicated they are the youngest child, while 15 percent indicated they are an only child.</p>
         <p>Recruited athletes accounted for 11 percent of the survey’s respondents, around the same percentage as the Class of 2017, and 9 percent of students surveyed expressed interest in walking on to varsity sports teams.</p>
-        <p><strong>From the Northeast, and Beyond</strong></p>
+        <p class="scroll-row"><strong>From the Northeast, and Beyond</strong></p>
         <p>Students from the Northeast make up a slightly greater portion of this year’s respondents than those who responded to last year’s survey. More than 43 percent of the surveyed freshmen hail from the Northeast, up two percentage points from last year. The proportion of Midwesterners decreased by three percentage points, from 14 percent last year to 11 percent this time around. By comparison, 18 percent of the U.S. population lives in the Northeast and 22 percent lives in the Midwest, according to U.S. Census data.</p>
         <p>The survey indicates that there are significant differences across regions when it comes to financial aid and family history at Harvard.</p>
         <p>Sixty-nine percent of surveyed students who said they are from outside the United States reported that they receive financial aid from Harvard, while only 48 percent of surveyed students from the Northeast said they receive financial aid.</p>
         <p>In addition, disproportionately more respondents from the Northeast reported having relatives that attended Harvard College. Thirty-five percent of Northeasterners said they have a relative who attended the College, compared to just 20 percent of those from the Southeast and 15 percent of those from outside the United States.</p>
         <p>The proportion of surveyed students who live in the suburbs has remained unchanged since last year, with 64 percent reporting that they live in such a community.</p>
         <p>Sixty percent of respondents attended a non-charter or charter public school, roughly the same percentage as the Class of 2017. The vast majority of the remaining 40 percent of students indicated that they had attended a non-denominational or parochial private school.</p>
-        <p><strong>Forecasting Their Own Future</strong></p>
+        <p class="scroll-row"><strong>Forecasting Their Own Future</strong></p>
         <p>Members of the Class of 2018 are confident in their financial prospects after graduation, the survey shows. Forty-two percent of respondents said they expect to make a starting salary of $70,000 or more after college, compared to 38 percent of those who responded in last year’s survey.</p>
         <p>Like last year, surveyed males expect to make a higher starting salary their female counterparts. A majority of males said they expect to make more than $70,000 out of college, while only 29 percent of females have the same expectations.</p>
         <p>Expectations of starting salaries after college also differed based on reported family income. Forty-eight percent of respondents with parents who reportedly earned more than $250,000 said they expect to make at least $70,000 after college, while only 38 percent of those with parents who reportedly earned less than $250,000 said they expect to make as much.</p>
