--- a/jinja2/index.html.jinja2
+++ b/jinja2/index.html.jinja2
@@ -20,29 +20,17 @@
 				<div class="card" id="makeup1" data-destination="makeup/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
 				<div class="card" id="makeup2" data-destination="http://www.thecrimson.com/article/2014/9/2/freshman-survey-part-i/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
-			<div class="survey-section">
-				<div class="subhead">Admissions</div>
-				<div class="card" id="admissions1" data-destination="admissions/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card" id="admissions2" data-destination="http://www.thecrimson.com/article/2014/9/3/freshman-survey-2018-admissions/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
-			</div>
-		</div>
-		<div class="section-container clearfix">
-			<div class="survey-section">
+			<div class="survey-section disabled">
 				<div class="subhead">Academics</div>
 				<div class="card" id="ac1" data-destination="academics/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
 				<div class="card" id="ac2" data-destination="http://www.thecrimson.com/article/2014/9/4/freshman-survey-academics-extracurriculars/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
-			<div class="survey-section">
+		</div>
+		<div class="section-container clearfix">
+			<div class="survey-section disabled survey-section-center">
 				<div class="subhead">Lifestyle</div>
 				<div class="card" id="sex1" data-destination="lifestyle/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
 				<div class="card" id="sex2" data-destination="http://www.thecrimson.com/article/2014/9/5/freshman-survey-beliefs-lifestyle/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
-			</div>
-		</div>
-		<div class="section-container clearfix">
-			<div class="survey-section survey-section-center">
-				<div class="subhead">Yale</div>
-				<div class="card" id="yale1" data-destination="yale/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card" id="yale2" data-destination="http://www.thecrimson.com/article/2014/9/5/freshman-survey-part-v/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 		</div>
 	</div>
