update landing links

--- a/jinja2/index.html.jinja2
+++ b/jinja2/index.html.jinja2
@@ -18,19 +18,19 @@
 			<div class="survey-section">
 				<div class="subhead">Makeup of the Class</div>
 				<div class="card" id="makeup1" data-destination="makeup/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card" id="makeup2" data-destination="http://www.thecrimson.com/article/2014/9/2/freshman-survey-part-i/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
+				<div class="card" id="makeup2" data-destination="makeup-narrative/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 			<div class="survey-section disabled">
 				<div class="subhead">Academics</div>
 				<div class="card" id="ac1" data-destination="academics/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card" id="ac2" data-destination="http://www.thecrimson.com/article/2014/9/4/freshman-survey-academics-extracurriculars/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
+				<div class="card" id="ac2" data-destination="academics-narrative/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 		</div>
 		<div class="section-container clearfix">
 			<div class="survey-section disabled survey-section-center">
 				<div class="subhead">Lifestyle</div>
 				<div class="card" id="sex1" data-destination="lifestyle/"><div class="cover"></div><div class="text"><span>Data</span></div></div>
-				<div class="card" id="sex2" data-destination="http://www.thecrimson.com/article/2014/9/5/freshman-survey-beliefs-lifestyle/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
+				<div class="card" id="sex2" data-destination="lifestyle-narrative/"><div class="cover"></div><div class="text"><span>Narrative</span></div></div>
 			</div>
 		</div>
 	</div>
