--- a/jinja2/makeup-narrative.html.jinja2
+++ b/jinja2/makeup-narrative.html.jinja2
@@ -4,9 +4,9 @@
     <script src="js/scroll.js" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
 
-{% block data_link %}/makeup/{% endblock %}
-{% block narrative_link %}/makeup-narrative/{% endblock %}
-{% block yale_link %}/makeup-yale/{% endblock %}
+{% block data_link %}makeup/{% endblock %}
+{% block narrative_link %}makeup-narrative/{% endblock %}
+{% block yale_link %}makeup-yale/{% endblock %}
 
 {% block nav_items_narrative %}
     <li>Who They Are</li>
@@ -69,11 +69,11 @@
             <li>Forty-one percent of respondents who are legacies according to the College said their parents’ combined annual income is $500,000 or more.</li>
         </ul>
         <p class="scroll-row"><strong>SAT Scores</strong></p>
-        <p>Following a year of national scrutiny surrounding Harvard’s use of <a href="http://www.thecrimson.com/article/2014/11/18/law-suit-admissions-alleged-discrimination/">race-based affirmative action and allegations</a> that its admissions processes discriminate against Asian applicants, the reported SAT scores of freshman respondents varied on average by race.</p>
+        <p>The average best overall SAT score of respondents was 2229. Following a year of national scrutiny surrounding Harvard’s use of <a href="http://www.thecrimson.com/article/2014/11/18/law-suit-admissions-alleged-discrimination/">race-based affirmative action and allegations</a> that its admissions processes discriminate against Asian applicants, the reported SAT scores of freshman respondents varied on average by race.</p>
         <ul>
             <li>Respondents who identify as Asian, but not including South Asian, reported higher overall SAT scores on average, with an overall best score of 2300 out of a possible 2400.</li>
             <li>The average best overall SAT score reported by white respondents was 2218; 2174 for respondents who are Hispanic or Latino; and 2149 for respondents who are black or African American.</li>
-            <li>Respondents who came from households with an income of less than $40,000 a year on average had lower overall best SAT scores—about 2189 on average—than those who came from more affluent backgrounds. Respondents whose parents make $500,000 or more each year reported a best overall SAT score of 2239 on average.<br><br></li>
+            <li>Respondents who came from households with an income of less than $40,000 a year on average had lower overall best SAT scores—about 2189 on average—than those who came from more affluent backgrounds. Respondents whose parents make $500,000 or more each year reported a best overall SAT score of 2239 on average.</li>
             <li>Surveyed students from private non-denominational schools reported slightly higher overall SAT scores—2250 on average—than students from public non-charter schools, who on average said they received 2225 on the test.</li>
             <li>Female respondents reported slightly higher overall SAT scores on average than male respondents— 2235 and about 2225, respectively.</li>
             <li>Surveyed freshmen who were admitted to the College through its single-choice early action admissions program reported higher SAT scores on average, with an overall score 0f 2239, compared to 2217 for regular admittees.</li>
