--- a/jinja2/makeup-yale.html.jinja2
+++ b/jinja2/makeup-yale.html.jinja2
@@ -4,9 +4,9 @@
     <script src="js/scroll.js" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
 
-{% block data_link %}/makeup/{% endblock %}
-{% block narrative_link %}/makeup-narrative/{% endblock %}
-{% block yale_link %}/makeup-yale/{% endblock %}
+{% block data_link %}makeup/{% endblock %}
+{% block narrative_link %}makeup-narrative/{% endblock %}
+{% block yale_link %}makeup-yale/{% endblock %}
 
 {% block content %}
     <div id="subhead">Meet the Yalies</div>
