--- a/jinja2/makeup.html.jinja2
+++ b/jinja2/makeup.html.jinja2
@@ -105,7 +105,7 @@
             <li id="athletes-vs-income-tab">
                 <h2>Recruited Athletes by Family Income</h2>
                 <div id="athletes-vs-income" class="graph"></div>
-                <p>Pending</p>
+                <p></p>
             </li>
             <li id="sexuality-tab">
                 <h2>Sexuality</h2>
@@ -115,7 +115,7 @@
             <li id="birth-order-tab">
                 <h2>Birth Order</h2>
                 <div id="birth-order" class="graph"></div>
-                <p>Pending</p>
+                <p></p>
             </li>
             <li id="school-type-tab">
                 <h2>Secondary School</h2>
@@ -125,7 +125,7 @@
             <li id="legacy-community-tab">
                 <h2>Legacy by Community</h2>
                 <div id="legacy-community" class="graph"></div>
-                <p>Pending</p>
+                <p></p>
             </li>
             <li id="legacy-income-tab">
                 <h2>Legacy by Family Income</h2>
@@ -190,15 +190,89 @@
             <li id="regions-outer" class="active">
                 <div id="regions-inner" class="clearfix">
                     <ul class="year-switch">
-                        <div class="year-switch-option" data-year="">2018</div><div
-                            class="year-switch-option selected" data-year="2019">2019</div>
+                        {# Spaceless #}
+                        <div class="year-switch-option" data-year="">2017</div><div
+                             class="year-switch-option" data-year="2018">2018</div><div
+                             class="year-switch-option selected" data-year="2019">2019</div>
                     </ul>
                     <div id="paper">
                         <p>A plurality of Harvard&rsquo;s Class of 2019 hails from the Northeast, at 38 percent, a decrease from the 43 percent of last year&rsquo;s respondents. Nineteen percent of this year&rsquo;s freshman respondents are from the West, and 11 percent are international students.</p>
                     </div>
                     <div id="regions-right">
                         <h2>Mouse over region to see data.</h2>
+
                         <div id="northeast" class="region">
+                            <h3>
+                                <div class="region-stat">41.1%</div>
+                                of students are from the Northeast.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">73.4%</div>
+                                of students plan to live there after college.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">88.7%</div>
+                                of students from the Northeast expect to return after graduating.
+                            </h3>
+                        </div>
+                        <div id="southeast" class="region">
+                            <h3>
+                                <div class="region-stat">11.7%</div>
+                                of students are from the Southeast.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">2.5%</div>
+                                of students plan to live there after college.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">12.2%</div>
+                                of students from the Southeast expect to return after graduating.
+                            </h3>
+                        </div>
+                        <div id="midwest" class="region">
+                            <h3>
+                                <div class="region-stat">13.8%</div>
+                                of students are from the Midwest.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">2.6%</div>
+                                of students plan to live there after college.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">18.6%</div>
+                                of students from the Midwest expect to return after graduating.
+                            </h3>
+                        </div>
+                        <div id="southwest" class="region">
+                            <h3>
+                                <div class="region-stat">7.8%</div>
+                                of students are from the Southwest.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">1.3%</div>
+                                of students plan to live there after college.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">10.0%</div>
+                                of students from the Southwest expect to return after graduating.
+                            </h3>
+                        </div>
+                        <div id="west" class="region">
+                            <h3>
+                                <div class="region-stat">14.5%</div>
+                                of students are from the West.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">10.7%</div>
+                                of students plan to live there after college.
+                            </h3>
+                            <h3>
+                                <div class="region-stat">42.2%</div>
+                                of students from the West expect to return after graduating.
+                            </h3>
+                        </div>
+
+                        <div id="northeast2018" class="region">
                             <h3>
                                 <div class="region-stat">43.1%</div>
                                 of students are from the Northeast.
@@ -212,7 +286,7 @@
                                 of students from the Northeast have a relative that went to Harvard College.
                             </h3>
                         </div>
-                        <div id="southeast" class="region">
+                        <div id="southeast2018" class="region">
                             <h3>
                                 <div class="region-stat">10.6%</div>
                                 of students are from the Southeast.
@@ -226,7 +300,7 @@
                                 of students from the Southeast have a relative that went to Harvard College.
                             </h3>
                         </div>
-                        <div id="midwest" class="region">
+                        <div id="midwest2018" class="region">
                             <h3>
                                 <div class="region-stat">11.0%</div>
                                 of students are from the Midwest.
@@ -240,7 +314,7 @@
                                 of students from the Midwest have a relative that went to Harvard College.
                             </h3>
                         </div>
-                        <div id="southwest" class="region">
+                        <div id="southwest2018" class="region">
                             <h3>
                                 <div class="region-stat">6.8%</div>
                                 of students are from the Southwest.
@@ -254,7 +328,7 @@
                                 of students from the Southwest have a relative that went to Harvard College.
                             </h3>
                         </div>
-                        <div id="west" class="region">
+                        <div id="west2018" class="region">
                             <h3>
                                 <div class="region-stat">16.9%</div>
                                 of students are from the West.
@@ -268,7 +342,7 @@
                                 of students from the West have a relative that went to Harvard College.
                             </h3>
                         </div>
-                        <div id="outside" class="region">
+                        <div id="outside2018" class="region">
                             <h3>
                                 <div class="region-stat">11.6%</div>
                                 of students are from outide the US.
@@ -282,8 +356,6 @@
                                 of students from outside the US have a relative that went to Harvard College.
                             </h3>
                         </div>
-
-
 
                         <div id="northeast2019" class="region">
                             <h3>
@@ -301,7 +373,7 @@
                         </div>
                         <div id="southeast2019" class="region">
                             <h3>
-                                <div class="region-stat">12.4%</div>
+                                <div class="region-stat">12.5%</div>
                                 of students are from the Southeast.
                             </h3>
                             <h3>
@@ -409,14 +481,12 @@
             <li id="starting-salary-tab" class="active">
                 <h2>Anticipated Starting Salary</h2>
                 <div id="starting-salary" class="graph"></div>
-                <p>Half of the Class of 2018 expects to earn a starting salary of between $50,000 and $90,000 right after graduation. The majority of the remaining half expects salaries below $50,000 that first year. Forty-two percent of respondents said they expect to earn a starting salary greater than $70,000. Only 38 percent of respondents to last year&rsquo;s Class of 2017 survey said they expected to earn such a salary.</p>
+                <p></p>
             </li>
             <li id="starting-salary-vs-gender-tab">
                 <h2>Anticipated Starting Salary by Gender</h2>
                 <div id="starting-salary-vs-gender" class="graph"></div>
-                <p>Surveyed male freshmen anticipate a significantly higher starting salary than their female counterparts across income brackets.</p>
-                <p> At the lower end, 11 percent of women and 6 percent of men said they anticipate making less than $30,000 immediately after graduation.</p>
-                <p>At the upper end, 5 percent of female freshman respondents and 11 percent of male freshman respondents said they anticipate earning more than $110,000 immediately after graduation.</p>
+                <p></p>
             </li>
             {# <li id="sector-start-over-time-tab">
                 <h2>Comparison of Anticipated Employment Field Immediately After Graduation and Ten Years Out</h2>
@@ -426,12 +496,12 @@
             <li id="sector-start-by-gender-tab">
                 <h2>Anticipated Employment Field by Gender</h2>
                 <div id="sector-start-by-gender" class="graph"></div>
-                <p>Like those surveyed in last year&rsquo;s freshman survey, female freshmen are less likely than their male counterparts to see themselves in a job related to entrepreneurship or finance after they graduate. They were more likely than men to envision themselves going to graduate or professional school and pursuing jobs in health and media or publishing.</p>
+                <p></p>
             </li>
             <li id="sector-start-by-school-type-tab">
                 <h2>Anticipated Post-Graduate Occupation by Secondary School Type</h2>
                 <div id="sector-start-by-school-type" class="graph"></div>
-                <p>Surveyed freshmen who attended public high school were more likely than their private-school counterparts to say they plan to go to graduate school or professional school after College. They are also more likely to pursue a job in the public sector, with 5 percent saying they plan on working in government or politics after graduation. On the other hand, those from private school backgrounds were more likely to say they would pursue a job in finance following graduation.</p>
+                <p></p>
             </li>
         </ul>
     </div>
@@ -445,9 +515,9 @@
             <li>
                 <a href="#sat-ethnicity-tab" data-toggle="tab">SAT by Ethnicity</a>
             </li>
-            <li>
+            {# <li>
                 <a href="#sat-income-tab" data-toggle="tab">SAT by Income</a>
-            </li>
+            </li> #}
             <li>
                 <a href="#sat-gender-tab" data-toggle="tab">SAT by Gender</a>
             </li>
@@ -463,19 +533,18 @@
             <li id="sat-tab" class="active">
                 <h2>GPA vs. SAT Score</h2>
                 <div class="scatter"><svg id="sat-gpa"></svg></div>
-                <p>The average self-reported unweighted GPA on a 4.0 scale was 3.93. Fifty-four percent of students reported a perfect 4.0 or above, the same as last year, and the lowest score reported was a 3.3, a marginal increase over respondents to last year&rsquo;s survey.</p>
-                <p>Freshmen reported an average composite SAT score of 2228, in line with that of last year&rsquo;s class. The reported average subject score was consistent across the three sections, with an average of 742 in the math section, 745 on writing, and 742 on critical reading.</p>
+                <p></p>
             </li>
             <li id="sat-ethnicity-tab">
                 <h2>Average SAT Scores by Ethnicity</h2>
                 <div id="sat-ethnicity" class="graph"></div>
                 <p>Respondents who identify as Asian, but not including South Asian, reported higher overall SAT scores on average, with an overall best score of 2300 out of a possible 2400. The average best overall SAT score reported by white respondents was 2218; 2174 for respondents who are Hispanic or Latino; and 2149 for respondents who are black or African American.</p>
             </li>
-            <li id="sat-income-tab">
+            {# <li id="sat-income-tab">
                 <h2>Average SAT Scores by Income Bracket</h2>
                 <div id="sat-income" class="graph"></div>
                 <p>Respondents who came from households with an income of less than $40,000 a year on average had lower overall best SAT scores&mdash;about 2189 on average&mdash;than those who came from more affluent backgrounds. Respondents whose parents make $500,000 or more each year reported a best overall SAT score of 2239 on average.</p>
-            </li>
+            </li> #}
             <li id="sat-gender-tab">
                 <h2>Average SAT Scores by Gender</h2>
                 <div id="sat-gender" class="graph"></div>
@@ -617,12 +686,12 @@
             <li id="early-income-tab">
                 <h2>Early Admission by Income Bracket</h2>
                 <div id="early-income" class="graph"></div>
-                <p>Nineteen percent of early admit respondents have parents with a combined income of $500,000 or more, though students with this level of family income make up only 15 percent of the surveyed Class of 2019 overall.</p>
+                <p>The proportion of students who reported that they were accepted early to Harvard tended to increase with increases in income bracket.</p>
             </li>
             <li id="early-school-type-tab">
                 <h2>Early Admission by School Type</h2>
                 <div id="early-school-type" class="graph"></div>
-                <p> Sixty percent of respondents admitted early come to Harvard from public high school and 39 percent from private school.</p>
+                <p>Sixty percent of respondents admitted early come to Harvard from public high school and 39 percent from private school.</p>
             </li>
         </ul>
     </div>
